# mcp-server-newrelic

./: .env.example  .gitignore  .pre-commit-config.yaml  APM_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  E2E_TEST_RESULTS.md  ENHANCEMENTS.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_ACTION_PLAN.md  INTEGRATION_GUIDE.md  LICENSE  MERGE_COMPLETION_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  PR_CONSOLIDATION_SUMMARY.md  PR_MERGE_STRATEGY.md  QUICKSTART.md  QUICK_START_GUIDES.md  README.md  SECURITY.md  TECHNICAL_VISION.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  TRACK1_COMPLETION_SUMMARY.md  TRACK1_PROGRESS.md  TROUBLESHOOTING.md  cli.py  client.py  config.py  diagnose.py  discovery_client.py  docker-compose.simple.yml  docker-compose.yml  (+13 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  test.yml  tests.yml
alerts/: mcp-server-alerts.json
clients/python/: README.md  pyproject.toml  requirements.txt  setup.py
clients/python/examples/: basic_usage.py  sync_usage.py
clients/python/src/newrelic_uds/: __init__.py  cli.py  client.py  models.py
clients/python/src/newrelic_uds/services/: __init__.py  dashboard.py  discovery.py  patterns.py  query.py
clients/python/tests/: __init__.py  conftest.py  test_client.py  test_discovery.py
clients/typescript/: .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: client.ts  index.ts
clients/typescript/tests/: client.test.ts  discovery.test.ts  query.test.ts
cmd/api-server/: main.go
cmd/discovery/: main.go
cmd/mcp-server/: main.go
cmd/server/: main.go  state_setup.go
cmd/uds/: README.md  main.go
cmd/uds-discovery/: main.go
cmd/uds/cmd/: config.go  dashboard.go  discovery.go  mcp.go  pattern.go  query.go  root.go
configs/: prometheus.yml
configs/plugins/: InfrastructurePlugin.yaml
core/: account_manager.py  audit.py  cache.py  cache_improved.py  docs_cache.py  entity_definitions.py  error_sanitizer.py  errors.py  health.py  nerdgraph_client.py  pagination.py  plugin_loader.py  plugin_manager.py  request_signing.py  security.py  session_manager.py  telemetry.py
dashboards/: mcp-server-dashboard.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_INTEGRATION.md  CONSISTENCY_CHECK.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_MAP.md  IMPLEMENTATION_LOG.md  IMPLEMENTATION_STATUS.md  MIGRATION_GUIDE.md  QUICKSTART.md  STATE_MANAGEMENT.md  TODO_MANAGEMENT.md  TRACK2_PROGRESS.md  apm-setup.md  integration-guide.md  track1-discovery-core.md  track2-interface-layer.md  track2-week1-summary.md  track2-week2-summary.md  track3-intelligence-engine.md  track4-platform-foundation.md
examples/: mcp-client-example.go
examples/go-client/: main.go
features/: __init__.py  alerts.py  apm.py  common.py  docs.py  entities.py  infrastructure.py  logs.py  synthetics.py
intelligence/: DOCKER.md  Dockerfile  README.md  __init__.py  __main__.py  docker-build.sh  docker-compose.yml  grpc_server.py  prometheus.yml  requirements.txt
intelligence/config/: __init__.py  config_manager.py  intelligence.yaml.example  settings.py
intelligence/examples/: __init__.py  pattern_detection_example.py  query_generation_example.py  visualization_example.py
intelligence/metrics/: __init__.py  performance_monitor.py
intelligence/models/: __init__.py  model_registry.py
intelligence/patterns/: __init__.py  anomaly.py  base.py  correlation.py  engine.py  statistical.py  timeseries.py
intelligence/query/: __init__.py  base.py  intent_parser.py  nrql_builder.py  query_generator.py  query_optimizer.py
intelligence/tests/: __init__.py  test_integration.py  test_pattern_detectors.py  test_query_generation.py
intelligence/visualization/: __init__.py  chart_recommender.py  data_shape_analyzer.py  layout_optimizer.py
internal/testutil/: fixtures.go
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: uds-overview.json
pkg/auth/: apikey.go  jwt.go  middleware.go  store.go
pkg/client/: README.md  client.go  client_test.go  dashboard.go  discovery.go  patterns.go  query.go  retry.go
pkg/config/: config.go
pkg/discovery/: config.go  engine.go  engine_basic.go  engine_helpers.go  engine_instrumented.go  engine_test.go  factory.go  helpers.go  init.go  interfaces.go  types.go
pkg/discovery/grpc/: server.go  types.go
pkg/discovery/nrdb/: circuit_breaker.go  client.go  client_instrumented.go  mock.go  rate_limiter.go  retry.go  types.go
pkg/discovery/patterns/: engine.go  engine_test.go
pkg/discovery/proto/: discovery.proto
pkg/discovery/quality/: assessor.go  assessor_test.go
pkg/intelligence/: service.go
pkg/state/: factory.go  integration.go  manager.go  manager_test.go  memory_cache.go  memory_cache_test.go  memory_store.go  memory_store_test.go  redis_cache.go  redis_store.go  types.go
pkg/telemetry/: newrelic.go
scripts/: deploy-dashboard.sh  release.sh  run-tests.sh  setup-claude-code.sh  setup-claude-desktop.sh  setup-dev.sh  setup-github-copilot.sh  test-coverage.sh  update-progress.sh
tests/: END_TO_END_TEST_REPORT.md  README.md  TESTING_SUMMARY.md  conftest.py  implementation_analysis_report.json  requirements.txt  run_tests.sh  test_all.py  test_cache.py  test_cache_improved.py  test_connection_pool_refcount.py  test_docs_plugin.py  test_error_sanitizer.py  test_nerdgraph_client.py  test_plugin_unloading.py  test_plugins.py  test_report_20250615_184446.json  test_report_20250615_184638.json  test_report_20250615_184644.json  test_report_20250615_184705.json  test_report_20250615_185039.json  test_security.py  test_strategy.md
tests/benchmarks/: discovery_benchmark_test.go  test_performance.py
tests/fixtures/: test_cases.yaml
tests/integration/: discovery_integration_test.go  edge_cases_test.go  test_end_to_end_workflows.py
tools/: __init__.py
transports/: __init__.py  http_transport.py  multi_transport.py  stdio_transport.py
(+46 files in other folders)
